@@ -53,7 +53,7 @@ function obj= sistema(varargin)
   obj.ti= []; % duration of stages                              [s]
   obj.tm= []; % maximum thermal power generation (t,j)          [MW]
   obj.tn= []; % minimum thermal power generation (t,j)          [MW]
-  obj.tp= []; % duration of load levels for each stage          [s]
+  obj.tp= {}; % duration of load levels for each stage          [s]
   obj.uc= []; % consumptive water use (i,j)                     [m^3/s]
   obj.uh= {}; % list of hydro plants
   obj.ut= {}; % list of thermal plants
